--- a/a0906/a0906_08.html
+++ b/a0906/a0906_08.html
@@ -48,7 +48,7 @@
       /* center부분 */
     #wrap .inrCenter{width:447px; height:517px; border:1px solid black;
       box-sizing:border-box; padding-top:50px;
-      background:url(images/hama5.jpg);}
+      background:url(images/hama5.jpg) no-repeat;}
     
 
     #wrap .inrRight{width:306px; height:517px; border:1px solid black;
