--- a/htmlSample/join02_info_input.html
+++ b/htmlSample/join02_info_input.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style_footer.css">
 		<title>회원가입 - 회원정보입력</title>
 		<style>
+			input[type="radio"]:not{opacity:0;}
 			#pwTxt{font-weight:700;}
 			.on{color:blue;}
 			.off{color:red;}
