--- a/a0924/a0924_08.html
+++ b/a0924/a0924_08.html
@@ -15,17 +15,24 @@
 
     function next(){
       count++;
+      // 3초과되면 0으로 변경하시오.
+      if(count<3) count=-1;
+      console.log(count);
+      document.querySelector("#back").style.backgroundColor = color[count];
     }
 
     function prev(){
       count--;
+      // 0미만이되면 3으로 변경하시오.
+      if(count<0) count=3;
+      document.querySelector("#back").style.backgroundColor = color[count];
     }
   </script>
-  <div>
+  <div id="back">
 
   </div>
-  <button>이전</button>
-  <button>다음</button>
+  <button onclick="prev()">이전</button>
+  <button onclick="next()">다음</button>
 
 </body>
 </html>
